Se agrega el proyecto

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Matricula: 2019-8225
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css\estilos.css">
-    <title>Tarea 3</title>
+    <title>Proyecto Final</title>
 </head>
 <body>
 
@@ -21,6 +21,9 @@ Matricula: 2019-8225
         <h1 id="titulo">Registro de Visitante</h1>
 
     </center>
+
+
+    <label id="salir" onclick="salir()">Salir</label>
 
     <div id="tr">
         <table id="registrar" class="table table-dark" style="border:none">
